force-app/main/default/objects/OrderImportColumnMap__mdt/OrderImportColumnMap__mdt.object-meta.xml
<CustomObject>
    <description>Column-to-field mapping used by Order import templates.</description>
    <label>Order Import Column Map</label>
    <pluralLabel>Order Import Column Maps</pluralLabel>
</CustomObject>