force-app/main/default/objects/OrderImportColumnMap__mdt/fields/Column_Header__c.field-meta.xml
<CustomField>
    <fullName>Column_Header__c</fullName>
    <label>Column Header</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>