force-app/main/default/objects/OrderImportColumnMap__mdt/fields/Lookup_Field_Api__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_Api__c</fullName>
    <label>Lookup Field Api</label>
    <length>80</length>
    <type>Text</type>
</CustomField>