force-app/main/default/objects/OrderImportColumnMap__mdt/fields/Lookup_Object_Api__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object_Api__c</fullName>
    <label>Lookup Object Api</label>
    <length>80</length>
    <type>Text</type>
</CustomField>