force-app/main/default/objects/OrderImportColumnMap__mdt/fields/Target_Field_Api__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Api__c</fullName>
    <label>Target Field Api</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>