force-app/main/default/objects/OrderImportColumnMap__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Column_Header__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Lookup_Field_Api__c</columns>
    <columns>Lookup_Object_Api__c</columns>
    <columns>Target_Field_Api__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Template_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>